--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     }
   ],
   "scripts": {
-    "devmode": ".\\scripts\\windows\\devmode_build.bat",
+    "devmode": "./scripts/windows/devmode_build.bat",
     "build-linux": "./scripts/ci_cd/build.sh",
-    "test": ".\\scripts\\ci_cd\\generate_package_env_variables.sh",
-    "run-example": ".\\scripts\\windows\\setup_and_run_example.bat",
+    "test": "./scripts/ci_cd/generate_package_env_variables.sh",
+    "run-example": "./scripts/windows/setup_and_run_example.bat",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'"
   },
   "eslintConfig": {
