--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -25,5 +25,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm i --no-package-lock
-      - run: npm run build-linux --if-present
+      - run: npm run build --if-present
       - run: npm test
