--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "rootDir": "src",
+    "outDir": "build"
   },
   "include": [
    "src",
