--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm i --no-package-lock
+      - run: npm i
       - run: npm run build --if-present
-      #- run: npm test
+      - run: npm test
