--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "devmode": "./scripts/windows/devmode_build.bat",
     "build-linux": "./scripts/ci_cd/build.sh",
     "build": "tsc --build --clean && tsc --build && npx babel ./src --out-dir ./build --extensions .ts,.tsx --copy-files",
-    "test": "./scripts/ci_cd/generate_package_env_variables.sh",
+    "test": "jest",
     "run-example": "./scripts/windows/setup_and_run_example.bat",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'"
   },
@@ -81,6 +81,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "jest": "^29.7.0",
     "aws-amplify": "^6.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "eslint": "^9.9.1",
