--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -26,4 +26,4 @@ jobs:
           cache: 'npm'
       - run: npm i
       - run: npm run build --if-present
-      - run: npm test --passWithNoTests
+      - run: npm test
