--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "devmode": "./scripts/windows/devmode_build.bat",
     "build-linux": "./scripts/ci_cd/build.sh",
     "build": "tsc --build --clean && tsc --build && npx babel ./src --out-dir ./build --extensions .ts,.tsx --copy-files",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "run-example": "./scripts/windows/setup_and_run_example.bat",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'"
   },
