ci: introduced release action to call semantic release procedure

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -4,9 +4,11 @@ on:
     branches-ignore:
       - 'main'
       - 'releases/**'
+      - 'develop'
     paths-ignore:
       - 'SBOM.json'
       - '*.md'
+      - '.github/**/*'
 jobs:
   build:
 
