ci(fix): added missing github release plugin

--- a/package.json
+++ b/package.json
@@ -384,7 +384,8 @@
           "tarballDir": "build"
         }
       ],
-      "@semantic-release/git"
+      "@semantic-release/git",
+      "@semantic-release/github"
     ]
   }
 }
