--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@npm-iav-frontend/iav-frontend-framework",
+  "name": "@iavofficial/frontend-framework",
   "version": "0.1.0",
   "private": false,
+  "license": "Apache-2.0",
   "description": "This framework is the foundation of IAV frontend applications to provide maintainability, expandability, unification and an improved developer experience.",
   "contributors": [
     {
@@ -22,11 +23,13 @@
     }
   ],
   "scripts": {
-    "devmode": ".\\scripts\\windows\\devmode_build.bat",
+    "devmode": "./scripts/windows/devmode_build.bat",
     "build-linux": "./scripts/ci_cd/build.sh",
-    "test": ".\\scripts\\ci_cd\\generate_package_env_variables.sh",
-    "run-example": ".\\scripts\\windows\\setup_and_run_example.bat",
-    "lint": "eslint 'src/**/*.{js,ts,tsx}'"
+    "build": "tsc --build --clean && tsc --build && npx babel ./src --out-dir ./build --extensions .ts,.tsx --copy-files",
+    "test": "jest --passWithNoTests",
+    "run-example": "./scripts/windows/setup_and_run_example.bat",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}'",
+    "release": "semantic-release"
   },
   "eslintConfig": {
     "extends": [
@@ -73,6 +76,10 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.21.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.3.3",
     "@svgr/babel-plugin-transform-svg-component": "^8.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.5",
@@ -82,9 +89,12 @@
     "@typescript-eslint/parser": "^8.2.0",
     "aws-amplify": "^6.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react": "^7.35.0",
+    "jest": "^29.7.0",
     "prettier": "^3.3.2",
+    "semantic-release": "^24.1.0",
     "typescript": "^5.0.2"
   },
   "files": [
@@ -199,5 +209,183 @@
       "./headerPanelElement": "./build/components/header/headerPanelElement.d.ts",
       "./headerMenuElement": "./build/components/header/headerMenuElement.d.ts"
     }
+  },
+  "release": {
+    "branches": [
+      "main",
+      {
+        "name": "develop",
+        "prerelease": "dev"
+      },
+      {
+        "name": "feat/*",
+        "prerelease": "ft"
+      }
+    ],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "conventionalcommits",
+          "presetConfig": {
+            "types": [
+              {
+                "type": "feat",
+                "section": "Features"
+              },
+              {
+                "type": "feature",
+                "section": "Features"
+              },
+              {
+                "type": "fix",
+                "section": "Bug Fixes"
+              },
+              {
+                "type": "perf",
+                "section": "Performance Improvements"
+              },
+              {
+                "type": "revert",
+                "section": "Reverts"
+              },
+              {
+                "type": "style",
+                "section": "Styles"
+              },
+              {
+                "type": "refactor",
+                "section": "Code Refactoring",
+                "hidden": false
+              },
+              {
+                "type": "docs",
+                "section": "Documentation",
+                "hidden": true
+              },
+              {
+                "type": "chore",
+                "section": "Miscellaneous Chores",
+                "hidden": true
+              },
+              {
+                "type": "test",
+                "section": "Tests",
+                "hidden": true
+              },
+              {
+                "type": "build",
+                "section": "Build System",
+                "hidden": true
+              },
+              {
+                "type": "ci",
+                "section": "Continuous Integration",
+                "hidden": true
+              }
+            ]
+          },
+          "releaseRules": [
+            {
+              "type": "style",
+              "release": "patch"
+            },
+            {
+              "type": "refactor",
+              "release": "patch"
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "conventionalcommits",
+          "presetConfig": {
+            "types": [
+              {
+                "type": "feat",
+                "section": "Features"
+              },
+              {
+                "type": "feature",
+                "section": "Features"
+              },
+              {
+                "type": "fix",
+                "section": "Bug Fixes"
+              },
+              {
+                "type": "perf",
+                "section": "Performance Improvements"
+              },
+              {
+                "type": "revert",
+                "section": "Reverts"
+              },
+              {
+                "type": "style",
+                "section": "Styles"
+              },
+              {
+                "type": "refactor",
+                "section": "Code Refactoring",
+                "hidden": true
+              },
+              {
+                "type": "docs",
+                "section": "Documentation",
+                "hidden": true
+              },
+              {
+                "type": "chore",
+                "section": "Miscellaneous Chores",
+                "hidden": true
+              },
+              {
+                "type": "test",
+                "section": "Tests",
+                "hidden": true
+              },
+              {
+                "type": "build",
+                "section": "Build System",
+                "hidden": true
+              },
+              {
+                "type": "ci",
+                "section": "Continuous Integration",
+                "hidden": false
+              }
+            ]
+          },
+          "releaseRules": [
+            {
+              "type": "style",
+              "release": "patch"
+            },
+            {
+              "type": "refactor",
+              "release": "patch"
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "CHANGELOG.md"
+        }
+      ],
+      [
+        "@semantic-release/npm",
+        {
+          "npmPublish": true,
+          "tarballDir": "build"
+        }
+      ],
+      "@semantic-release/git",
+      "@semantic-release/github"
+    ]
   }
 }
