refactor: refactor contentBar.tsx with eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,12 +21,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-extra-non-null-assertion": "off",
     "@typescript-eslint/no-unused-expressions": "off",
-    "no-undef": "off",
-    "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
-    "react/prop-types": "off",
-    "react/display-name": "off",
-    "@typescript-eslint/no-unused-vars": "warn",
-    "no-prototype-builtins": "off"
+    "no-undef": "off"
   },
   "settings": {
     "react": {
