--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "build": "tsc --build --clean && tsc --build && npx babel ./src --out-dir ./build --extensions .ts,.tsx --copy-files",
     "test": "jest --passWithNoTests",
     "run-example": "./scripts/windows/setup_and_run_example.bat",
-    "lint": "eslint 'src/**/*.{js,ts,tsx}'",
+    "lint": "eslint src/**/*.{js,ts,tsx}",
     "release": "semantic-release"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -85,13 +84,14 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
     "aws-amplify": "^6.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "conventional-changelog-conventionalcommits": "^8.0.0",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "semantic-release": "^24.1.0",
