remove static.yml

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -10,7 +10,7 @@ on:
       - main
 
 permissions:
-  contents: write
+  contents: write  # Erlaubt das Pushen von Commits
 
 jobs:
   deploy-docs:
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Ensures we have access to all branches
 
       - name: Set up Git user
         run: |
@@ -57,17 +57,11 @@ jobs:
           cp -r docs/* $PACKAGE_VERSION/
           git add $PACKAGE_VERSION
 
-      - name: Move index, nav.js, pages.css, and styles.css to root
-        run: |
-          mv $PACKAGE_VERSION/index.html index.html
-          mv $PACKAGE_VERSION/pages/script/nav.js nav.js
-          mv $PACKAGE_VERSION/pages/styles/pages.css pages.css
-          mv $PACKAGE_VERSION/pages/styles/styles.css styles.css
-          git add index.html nav.js pages.css styles.css
-
       - name: Append current version to version-list.md
         run: |
           echo -e "\n$PACKAGE_VERSION" >> version-list.md
           git add version-list.md
+          rm -rf docs/*
+          git add .
           git commit -m "Append version $PACKAGE_VERSION to version-list.md"
           git push origin gh-pages
