--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "run-example": "./scripts/windows/setup_and_run_example.bat",
     "run-example:windows": ".\\scripts\\windows\\setup_and_run_example.bat",
     "lint": "eslint src/**/*.{js,ts,tsx}",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\" && prettier --write \"docs/*\"",
     "release": "semantic-release"
   },
   "eslintConfig": {
