--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -12,9 +12,7 @@ on:
       - 'docs/**/*'
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [ 20.x, 22.x ]
@@ -27,6 +25,4 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm i
-      - run: npm run build --if-present
-      - run: npm test
+      - run: npm run test
