--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 
@@ -9,10 +8,9 @@
 /coverage
 
 # production
-/build
 /lib
 
-# misc
+# Config, Logs etc.
 .DS_Store
 .env.local
 .env.development.local
@@ -22,7 +20,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.idea/
 
-# example project
-/example/dist
+.idea
+**/.turbo
+
+# Generated files
+**/node_modules
+**/dist
+**/build
