--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+      
+      - run: npm i
 
       - name: Build all packages and release them
         env:
