--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iavofficial/frontend-framework",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "private": false,
   "license": "Apache-2.0",
   "description": "This framework is the foundation of IAV frontend applications to provide maintainability, expandability, unification and an improved developer experience.",
@@ -141,6 +141,7 @@
     "./defaultContentSelectionElement": "./build/components/content/defaultContentSelectionElement.js",
     "./hash": "./build/utils/hash.js",
     "./navbarSettingsTypes": "./build/types/navbarSettingsTypes.js",
+    "./navbarSettingsContext": "./build/types/navbarContext.js",
     "./i18n": "./build/components/internationalization/i18n.js",
     "./language": "./build/contexts/language.js",
     "./translators": "./build/components/internationalization/translators.js",
@@ -194,6 +195,7 @@
       "./defaultContentSelectionElement": "./build/components/content/defaultContentSelectionElement.d.ts",
       "./hash": "./build/utils/hash.d.ts",
       "./navbarSettingsTypes": "./build/types/navbarSettingsTypes.d.ts",
+      "./navbarSettingsContext": "./build/types/navbarContext.d.ts",
       "./i18n": "./build/components/internationalization/i18n.d.ts",
       "./language": "./build/contexts/language.d.ts",
       "./translators": "./build/components/internationalization/translators.d.ts",
