--- a/packages/aws-authenticator/package.json
+++ b/packages/aws-authenticator/package.json
@@ -36,10 +36,10 @@
     "aws authenticator"
   ],
   "dependencies": {
+    "@aws-amplify/auth": "6.5.5",
     "@iavofficial/frontend-framework-shared-types": "*",
     "@iavofficial/frontend-framework-shared-utils": "*",
     "@reduxjs/toolkit": "^2.5.1",
-    "aws-amplify": "^6.3.4",
     "react-redux": "^9.2.0"
   },
   "peerDependencies": {
