--- a/packages/aws-authenticator/package.json
+++ b/packages/aws-authenticator/package.json
@@ -36,11 +36,11 @@
     "aws authenticator"
   ],
   "dependencies": {
+    "@aws-amplify/auth": "6.5.5",
     "@iavofficial/frontend-framework": "*",
+    "@iavofficial/frontend-framework-shared-react-common": "*",
     "@iavofficial/frontend-framework-shared-types": "*",
     "@iavofficial/frontend-framework-shared-utils": "*",
-    "@iavofficial/frontend-framework-shared-react-common": "*",
-    "@aws-amplify/auth": "6.5.5",
     "@reduxjs/toolkit": "^2.5.1",
     "react-redux": "^9.2.0"
   },
@@ -60,6 +60,7 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
