--- a/packages/frontend-framework/package.json
+++ b/packages/frontend-framework/package.json
@@ -68,6 +68,7 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "conventional-changelog-conventionalcommits": "^8.0.0",
     "jest": "^29.7.0",
@@ -105,7 +106,7 @@
     "./customContentbarWrapper": "./dist/components/content/customContentbarWrapper.js",
     "./basicContentbarWrapper": "./dist/components/content/basicContentbarWrapper.js",
     "./colorProvider": "./dist/coloring/colorProvider.js",
-    "./colorSettingsContext": "./dist/contexts/colorsettings.js",
+    "./colorSettingsContext": "./dist/contexts/colorSettingsContext.js",
     "./colorOptionTypes": "./dist/coloring/colorOptionTypes.js",
     "./constants": "./dist/constants.js",
     "./contentWithBar": "./dist/components/content/contentWithBar.js",
@@ -130,7 +131,8 @@
     "./framework.css": "./dist/components/css/framework.css",
     "./globalColors.css": "./dist/components/css/globalColors.css",
     "./headerPanelElement": "./dist/components/header/headerPanelElement.js",
-    "./headerMenuElement": "./dist/components/header/headerMenuElement.js"
+    "./headerMenuElement": "./dist/components/header/headerMenuElement.js",
+    "./store": "./dist/store.js"
   },
   "typesVersions": {
     "*": {
@@ -157,7 +159,7 @@
       "./customContentbarWrapper": "./dist/components/content/customContentbarWrapper.d.ts",
       "./basicContentbarWrapper": "./dist/components/content/basicContentbarWrapper.d.ts",
       "./colorProvider": "./dist/coloring/colorProvider.d.ts",
-      "./colorSettingsContext": "./dist/contexts/colorsettings.d.ts",
+      "./colorSettingsContext": "./dist/contexts/colorSettingsContext.d.ts",
       "./colorOptionTypes": "./dist/coloring/colorOptionTypes.d.ts",
       "./constants": "./dist/constants.d.ts",
       "./contentWithBar": "./dist/components/content/contentWithBar.d.ts",
@@ -182,7 +184,10 @@
       "./framework.css": "./dist/components/css/framework.css",
       "./globalColors.css": "./dist/components/css/globalColors.css",
       "./headerPanelElement": "./dist/components/header/headerPanelElement.d.ts",
-      "./headerMenuElement": "./dist/components/header/headerMenuElement.d.ts"
+      "./headerMenuElement": "./dist/components/header/headerMenuElement.d.ts",
+      "./store": [
+        "./dist/store.d.ts"
+      ]
     }
   },
   "publishConfig": {
