--- a/packages/shared-react-common/package.json
+++ b/packages/shared-react-common/package.json
@@ -55,6 +55,7 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
@@ -67,13 +68,23 @@
   "exports": {
     "./appLogoPlaceholder": "./dist/components/appLogoPlaceholder.js",
     "./loginButtonWithSpinner": "./dist/components/loginButtonWithSpinner.js",
-    "./colorSettingsContext": "./dist/contexts/colorSettingsContext.js"
+    "./colorSettingsContext": "./dist/contexts/colorSettingsContext.js",
+    "./moduleContext": "./dist/contexts/moduleContext.js"
   },
   "typesVersions": {
     "*": {
-      "./appLogoPlaceholder": ["./dist/components/appLogoPlaceholder.d.ts"],
-      "./loginButtonWithSpinner": ["./dist/components/loginButtonWithSpinner.d.ts"],
-      "./colorSettingsContext": ["./dist/contexts/colorSettingsContext.d.ts"]
+      "./appLogoPlaceholder": [
+        "./dist/components/appLogoPlaceholder.d.ts"
+      ],
+      "./loginButtonWithSpinner": [
+        "./dist/components/loginButtonWithSpinner.d.ts"
+      ],
+      "./colorSettingsContext": [
+        "./dist/contexts/colorSettingsContext.d.ts"
+      ],
+      "./moduleContext": [
+        "./dist/contexts/moduleContext.d.ts"
+      ]
     }
   },
   "publishConfig": {
