--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
@@ -66,17 +67,23 @@
   "exports": {
     "./authenticationProvider": "./dist/auth/authenticationProvider.js",
     "./authenticationViewProps": "./dist/auth/authenticationViewProps.js",
-
     "./colorOptionTypes": "./dist/colorOptionTypes.js",
     "./module": "./dist/module.js"
   },
   "typesVersions": {
     "*": {
-      "./authenticationProvider": ["./dist/auth/authenticationProvider.d.ts"],
-      "./authenticationViewProps": ["./dist/auth/authenticationViewProps.d.ts"],
-
-      "./colorOptionTypes": ["./dist/colorOptionTypes.d.ts"],
-      "./module": ["./dist/module.d.ts"]
+      "./authenticationProvider": [
+        "./dist/auth/authenticationProvider.d.ts"
+      ],
+      "./authenticationViewProps": [
+        "./dist/auth/authenticationViewProps.d.ts"
+      ],
+      "./colorOptionTypes": [
+        "./dist/colorOptionTypes.d.ts"
+      ],
+      "./module": [
+        "./dist/module.d.ts"
+      ]
     }
   },
   "publishConfig": {
