--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
@@ -67,18 +68,20 @@
   ],
   "exports": {
     "./containsOneOrMoreGroups": "./dist/auth/containsOneOrMoreGroups.js",
-
     "./parseLanguageResourcesIntoDropdownFormat": "./dist/internationalization/parseLanguageResourcesIntoDropdownFormat.js",
-
     "./hash": "./dist/hash.js"
   },
   "typesVersions": {
     "*": {
-      "./containsOneOrMoreGroups": ["./dist/auth/containsOneOrMoreGroups.d.ts"],
-
-      "./parseLanguageResourcesIntoDropdownFormat": ["./dist/internationalization/parseLanguageResourcesIntoDropdownFormat.d.ts"],
-
-      "./hash": ["./dist/hash.d.ts"]
+      "./containsOneOrMoreGroups": [
+        "./dist/auth/containsOneOrMoreGroups.d.ts"
+      ],
+      "./parseLanguageResourcesIntoDropdownFormat": [
+        "./dist/internationalization/parseLanguageResourcesIntoDropdownFormat.d.ts"
+      ],
+      "./hash": [
+        "./dist/hash.d.ts"
+      ]
     }
   },
   "publishConfig": {
