--- a/packages/frontend-framework/package.json
+++ b/packages/frontend-framework/package.json
@@ -82,7 +82,6 @@
     "./README.md"
   ],
   "exports": {
-    "./store": "./dist/store.js",
     "./uiLayer": "./dist/components/uiLayer.js",
     "./globalDataLayer": "./dist/components/globalDataLayer.js",
     "./auth": "./dist/contexts/auth.js",
@@ -125,6 +124,8 @@
     "./imprint": "./dist/components/imprint/imprintText.js",
     "./headerPanelElement": "./dist/components/header/headerPanelElement.js",
     "./headerMenuElement": "./dist/components/header/headerMenuElement.js",
+    "./store": "./dist/re-exports/store.js",
+    "./defaultModules": "./dist/re-exports/defaultModules.js",
     "./constants": "./dist/re-exports/constants.js",
     "./mandatoryModuleNames": "./dist/re-exports/mandatoryModuleNames.js",
     "./hash": "./dist/re-exports/hash.js",
@@ -137,9 +138,6 @@
   },
   "typesVersions": {
     "*": {
-      "./store": [
-        "./dist/store.d.ts"
-      ],
       "./uiLayer": [
         "./dist/components/uiLayer.d.ts"
       ],
@@ -265,6 +263,12 @@
       ],
       "./headerMenuElement": [
         "./dist/components/header/headerMenuElement.d.ts"
+      ],
+      "./store": [
+        "./dist/re-exports/store.d.ts"
+      ],
+      "./defaultModules": [
+        "./dist/re-exports/defaultModules.d.ts"
       ],
       "./constants": [
         "./dist/re-exports/constants.d.ts"
