--- a/packages/frontend-framework/docs/package.json
+++ b/packages/frontend-framework/docs/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "node fix-paths.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -17,12 +18,13 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@types/react-syntax-highlighter": "^15.5.13",
+    "react-syntax-highlighter": "15.6.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "replace-in-file": "^8.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
