--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,10 @@ on:
       - main
       - develop
     paths-ignore:
-      - 'SBOM.json'
-      - '*.md'
-      - '.github/**/*'
-      - 'docs/**/*'
+      - "SBOM.json"
+      - "*.md"
+      - ".github/**/*"
+      - "docs/**/*"
 
 jobs:
   release:
@@ -22,11 +22,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
-          
+          node-version: "22.x"
+
+      - run: find ./main/scripts/unix/ -type f -exec chmod +x {} \;
+
       # Install Turborepo
       - run: npm i
-      
+
       - run: npm run build
 
       - run: npm run test
@@ -46,15 +48,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-                
+
       - name: Set environment variables
         run: echo "GITHUB_ACTOR=${{ github.actor }}" >> $GITHUB_ENV
-      
+
       - name: Set GitHub identity
         run: |
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global user.name "${GITHUB_ACTOR}"
-            
+
+      - run: find ./main/scripts/unix/ -type f -exec chmod +x {} \;
+
       - name: Prepare gh-pages
         run: |
           git fetch origin
@@ -67,9 +71,7 @@ jobs:
           fi
           mkdir main
           git archive --format=tar main | tar -x -C main
-      
-      - run: chmod +x ./main/scripts/unix/*
-                
+
       - name: Generate docs
         run: |
           ./main/scripts/unix/copy-additional-files.sh
