--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: "22.x"
 
-      - run: find ./main/scripts/unix/ -type f -exec chmod +x {} \;
+      - run: find ./scripts/unix/ -type f -exec chmod +x {} \;
 
       # Install Turborepo
       - run: npm i
@@ -57,8 +57,6 @@ jobs:
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global user.name "${GITHUB_ACTOR}"
 
-      - run: find ./main/scripts/unix/ -type f -exec chmod +x {} \;
-
       - name: Prepare gh-pages
         run: |
           git fetch origin
@@ -72,11 +70,13 @@ jobs:
           mkdir main
           git archive --format=tar main | tar -x -C main
 
+      - run: find ./main/scripts/unix/ -type f -exec chmod +x {} \;
+
       - name: Generate docs
         run: |
-          ./main/scripts/unix/copy-additional-files.sh
+          ./main/scripts/unix/docs_generation/copy-additional-files.sh
           cd main
           npm i
           npm run generate-docs
           cd ..
-          ./main/scripts/unix/process-and-commit-docs.sh
+          ./main/scripts/unix/docs_generation/process-and-commit-docs.sh
