--- a/packages/frontend-framework/tsconfig.json
+++ b/packages/frontend-framework/tsconfig.json
@@ -4,11 +4,7 @@
     "emitDeclarationOnly": true,
     "isolatedModules": true,
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -23,8 +19,5 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "include": [
-   "src",
-   "custom.d.ts"
-, "src/module_orchestration/store.ts"  ]
+  "include": ["src", "custom.d.ts"]
 }
