chore: Added npmrc to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,7 @@ yarn-error.log*
 **/dist
 **/build
 
+.npmrc
+
 # Local env files for values which should not be uploaded to GitHub
 **/.env.*.local
