chore: Implemented default router and integrated router module

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -37,7 +37,9 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -87,6 +89,7 @@
     "./dummyAuthenticatorModule": "./dist/modules/default_modules/auth/dummyAuthenticatorModule.js",
     "./authenticatorModule": "./dist/types/modules/auth/authenticatorModule.js",
     "./authenticationViewProps": "./dist/types/modules/auth/authenticationViewProps.js",
+    "./routingModule": "./dist/types/modules/routing/routingModule.js",
     "./colorOptionTypes": "./dist/types/color/colorOptionTypes.js",
     "./requiredMutable": "./dist/types/util-types/requiredMutable.js",
     "./componentTypeMinProps": "./dist/types/util-types/componentTypeMinProps.js",
@@ -143,6 +146,9 @@
       ],
       "./authenticationViewProps": [
         "./dist/types/modules/auth/authenticationViewProps.d.ts"
+      ],
+      "./routingModule": [
+        "./dist/types/modules/routing/routingModule.d.ts"
       ],
       "./colorOptionTypes": [
         "./dist/types/color/colorOptionTypes.d.ts"
